# nonebot-plugin-autoreply

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: black.yml  gen-sidebar.yml  pypi-publish.yml
marketplace/: _coverpage.md  _navbar.md  index.html  package.json  wrangler.toml
marketplace/configuring/: README.md
marketplace/contributing/: README.md
marketplace/market/: README.md  _sidebar.md  are_you_here.md  contributing.md
marketplace/market/replies/: README.md  are_you_here.md  fortran.md  fuck_you.md  i_am_rubbish.md
marketplace/replies/: _sidebar.md  readme.md
marketplace/replies/Fortran/: Fortran.yaml
marketplace/replies/are_you_here/: README.md  info.md  meta.json  reply.json  reply.yml
marketplace/replies/fortran/: meta.json  reply.yaml
marketplace/replies/fuck_you/: info.md  meta.json  reply.yml
marketplace/replies/i_am_rubbish/: info.md  meta.json  reply.yml
marketplace/scripts/: action.sh  gen_market.py  gen_sidebar.py
nonebot_plugin_autoreply/: __init__.py  __main__.py  config.py  cool_down.py  util.py
