[project]
name = "nonebot-plugin-autoreply"
dynamic = ["version"]
description = "A powerful auto reply plugin for NoneBot2"
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.3.1",
    "nonebot-adapter-onebot>=2.4.3",
    "typing-extensions>=4.12.2",
    "PyYAML>=6.0.1",
    "anyio>=4.4.0",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-autoreply"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_autoreply/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
