[project]
name = "nonebot-plugin-autoreply"
dynamic = ["version"]
description = "A powerful auto reply plugin for NoneBot2"
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.4.3",
    "nonebot-adapter-onebot>=2.4.6",
    "typing-extensions>=4.14.1",
    "PyYAML>=6.0.2",
    "anyio>=4.10.0",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-autoreply"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "nonebot_plugin_autoreply/__init__.py"
